--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "tailwindcss-primeui": "^0.5.1",
     "toastr": "^2.1.4",
     "tslib": "^2.3.0",
-    "zone.js": "~0.15.0"
+    "zone.js": "~0.15.0",
+    "json-server": "^1.0.0-beta.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.1.8",
@@ -41,7 +42,6 @@
     "@types/jasmine": "~5.1.0",
     "autoprefixer": "^10.4.20",
     "jasmine-core": "~5.5.0",
-    "json-server": "^1.0.0-beta.3",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
